@@ -1,3 +1,9 @@
+2004-04-01  David Zeuthen  <david@fubar.dk>
+
+	* hald/linux/common.c (rename_and_merge): Fixed a subtle error where
+	multiple instances of the same device couldn't appear in the device
+	list
+
 2004-03-29  Robert Love  <rml@ximian.com>
 
 	* tools/linux/hal_hotplug.c: add a "strcat_len()" macro and use it
